--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "bike_tool",
+  "name": "redux_train",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-portal": "^4.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux-form": "^8.3.7",
+    "sass": "^1.43.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "db": "json-server --watch db.json",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +40,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.23.0",
+    "jssha": "^3.2.0",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   }
 }
