--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "redux-form": "^8.3.7",
     "sass": "^1.43.3",
+    "swiper": "^7.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
