--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux-form": "^8.3.7",
     "sass": "^1.43.3",
     "swiper": "^7.2.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "wicket": "^1.3.8"
   },
   "scripts": {
     "db": "json-server --watch db.json",
